<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.allen.library.SuperTextView
        android:id="@+id/st_by_dynamic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_93"
        app:sBottomDividerLineMarginLR="@dimen/dp_20"
        app:sCenterSpaceHeight="@dimen/dp_2"
        app:sDividerLineColor="@color/white_color_line"
        app:sDividerLineHeight="@dimen/dp_1"
        app:sLeftBottomTextColor="@color/color_7F7F7F"
        app:sLeftBottomTextSize="@dimen/sp_12"
        app:sLeftBottomTextString="@string/released_by_dynamic_des"
        app:sLeftTopTextColor="@color/color_262626"
        app:sLeftTopTextSize="@dimen/sp_17"
        app:sLeftTopTextString="@string/released_by_dynamic"
        app:sLeftViewGravity="left_center"
        app:sLeftViewMarginLeft="@dimen/dp_20"
        app:sRightSwitchMarginRight="@dimen/dp_20"
        app:sRightViewType="switchBtn"
        app:sSwitchIsChecked="true"
        android:theme="@style/MySwitch"
        app:sUseRipple="false" />

    <com.allen.library.SuperTextView
        android:id="@+id/st_direct_messages"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_93"
        app:sBottomDividerLineMarginLR="@dimen/dp_20"
        app:sCenterSpaceHeight="@dimen/dp_2"
        app:sDividerLineColor="@color/white_color_line"
        app:sDividerLineHeight="@dimen/dp_1"
        app:sLeftBottomTextColor="@color/color_7F7F7F"
        app:sLeftBottomTextSize="@dimen/sp_12"
        app:sLeftBottomTextString="@string/allowing_others_to_send_me_messages"
        app:sLeftTopTextColor="@color/color_262626"
        app:sLeftTopTextSize="@dimen/sp_17"
        app:sLeftTopTextString="@string/direct_messages_to_set"
        app:sLeftViewGravity="left_center"
        app:sLeftViewMarginLeft="@dimen/dp_20"
        app:sRightSwitchMarginRight="@dimen/dp_20"
        app:sRightViewType="switchBtn"
        android:theme="@style/MySwitch"
        app:sSwitchIsChecked="true"
        app:sUseRipple="false" />

    <com.allen.library.SuperTextView
        android:id="@+id/st_exceptional_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_93"
        app:sBottomDividerLineMarginLR="@dimen/dp_20"
        app:sCenterSpaceHeight="@dimen/dp_2"
        app:sDividerLineColor="@color/white_color_line"
        app:sDividerLineHeight="@dimen/dp_1"
        app:sLeftBottomTextColor="@color/color_7F7F7F"
        app:sLeftBottomTextSize="@dimen/sp_12"
        android:theme="@style/MySwitch"
        app:sLeftBottomTextString="@string/when_someone_is_exceptional_for_me_let_me_know"
        app:sLeftTopTextColor="@color/color_262626"
        app:sLeftTopTextSize="@dimen/sp_17"
        app:sLeftTopTextString="@string/exceptional_message"
        app:sLeftViewGravity="left_center"
        app:sLeftViewMarginLeft="@dimen/dp_20"
        app:sRightSwitchMarginRight="@dimen/dp_20"
        app:sRightViewType="switchBtn"
        app:sSwitchIsChecked="true"
        app:sUseRipple="false" />

    <com.allen.library.SuperTextView
        android:id="@+id/st_news_notice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_93"
        app:sCenterSpaceHeight="@dimen/dp_2"
        app:sDividerLineColor="@color/white_color_line"
        app:sDividerLineHeight="@dimen/dp_1"
        android:theme="@style/MySwitch"
        app:sLeftBottomTextColor="@color/color_7F7F7F"
        app:sLeftBottomTextSize="@dimen/sp_12"
        app:sLeftBottomTextString="@string/when_someone_follow_me_let_me_know"
        app:sLeftTopTextColor="@color/color_262626"
        app:sLeftTopTextSize="@dimen/sp_17"
        app:sLeftTopTextString="@string/news_notice"
        app:sLeftViewGravity="left_center"
        app:sLeftViewMarginLeft="@dimen/dp_20"
        app:sRightSwitchMarginRight="@dimen/dp_20"
        app:sRightViewType="switchBtn"
        app:sSwitchIsChecked="true"
        app:sUseRipple="false" />

    <com.allen.library.SuperTextView
        android:id="@+id/st_hot_news_notice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_93"
        app:sCenterSpaceHeight="@dimen/dp_2"
        app:sDividerLineColor="@color/white_color_line"
        app:sDividerLineHeight="@dimen/dp_1"
        android:theme="@style/MySwitch"
        app:sLeftBottomTextColor="@color/color_7F7F7F"
        app:sLeftBottomTextSize="@dimen/sp_12"
        app:sLeftBottomTextString="@string/when_hot_today_let_me_know"
        app:sLeftTopTextColor="@color/color_262626"
        app:sLeftTopTextSize="@dimen/sp_17"
        app:sLeftTopTextString="@string/hot_news_notice"
        app:sLeftViewGravity="left_center"
        app:sLeftViewMarginLeft="@dimen/dp_20"
        app:sRightSwitchMarginRight="@dimen/dp_20"
        app:sRightViewType="switchBtn"
        app:sSwitchIsChecked="true"
        app:sUseRipple="false" />
</LinearLayout>