<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_20"
    android:paddingTop="@dimen/dp_32"
    android:paddingEnd="@dimen/dp_20"
	android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_mobile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_password"
        android:textStyle="bold"
        android:textColor="@color/color_262626"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:id="@+id/text_requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/password_is_required_to"
        android:textColor="@color/color_7F7F7F"
        android:textSize="@dimen/sp_14" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/shape_input_login"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_12">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_passwd"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:background="@null"
	        android:maxLength="20"
	        android:gravity="center_vertical"
            android:hint="@string/enter_new_password"
            android:singleLine="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:textColorHint="@color/color_BFBFBF"
            android:textSize="@dimen/sp_17" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/image_see_pass"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:background="@color/transparent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/login_pwd_hide_icon" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_password_error"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/dp_8"
        android:textColor="@color/colorFF5050"
        android:textSize="@dimen/sp_14" />

	<com.jmbon.widget.progress_button.JmbonButton
		android:id="@+id/sb_get_captcha"
		android:layout_marginTop="@dimen/dp_15"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dp_50"
		android:text="@string/update_password"
		android:textColor="@color/white"
		android:textSize="@dimen/sp_16"
		android:textStyle="bold"
		android:enabled="false"
		app:jButtonStyle="green_full"
		app:jSelectText="@string/home_have_follow"
		app:jShowLoading="true"
		app:jShowLoadingWhenClick="true"
		app:jUseSelector="true" />

</LinearLayout>